Adds inotify-tools role. Improves description.

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -9,6 +9,7 @@
     - postgresql
     - nodejs
     - git
+    - inotify-tools
   tasks:
     - name: set postgres password
       postgresql_user: user=postgres password=postgres
