--- a/ansible/roles/elixir/tasks/main.yml
+++ b/ansible/roles/elixir/tasks/main.yml
@@ -39,4 +39,6 @@
     - local.rebar
 
 - name: install phoenix
-  shell: "yes | mix archive.install https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez"
+  shell: "mix archive.install --force https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez"
+  become: true
+  become_user: "{{ elixir_phoenix_user }}"
