--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -11,10 +11,18 @@
     - git
     - inotify-tools
   tasks:
+    - name: install extra packages
+      yum: "name={{ item }} state=installed"
+      with_items:
+        - gcc
+        - gcc-c++
+        - make
+        - openssl-devel
+
     - name: set postgres password
       postgresql_user: user=postgres password=postgres
   vars:
-    elixir_version: 1.3.1
+    elixir_version: 1.3.2
     elixir_phoenix_user: vagrant
     postgresql_version: 9.4
     nodejs_version: 5.x
